# Vacuum_decay

./: .gitignore  CMakeLists.txt  README.md
Code/kernel/: ramp_up.cl  thekernel_0.cl  thekernel_1.cl  thekernel_2.cl  thekernel_3.cl  utilities.cl
Code/mesh/: Periodic_segment.geo  Periodic_segment.msh  Periodic_square.geo  Periodic_square.msh
Code/shader/: voxel_fragment.frag  voxel_vertex.vert
Code/src/: main.cpp
Mathematica/: cosenoseno.nb
