message("Checking cmake version...")                                                                # Printing message...
cmake_minimum_required(VERSION 3.0)                                                                 # Requiring cmake 3.0...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################ C/C++ COMPILER ################################")         # Printing message...
message("################################################################################")         # Printing message...

message("Setting project name...")                                                                  # Printing message...
project (vacuum_decay)                                                                               # Setting project name...
message("Project name = ${PROJECT_NAME}")                                                           # Printing message...

set(CMAKE_CXX_STANDARD 17)                                                                          # Setting C++17 standard...
set(CMAKE_CXX_STANDARD_REQUIRED ON)                                                                 # Setting complier standard requirement...
set(CMAKE_CXX_EXTENSIONS OFF)                                                                       # Disabling compiler-specific standards...

message("Setting build type...")                                                                    # Printing message...
set(CMAKE_BUILD_TYPE Release)                                                                       # Setting build type...
message("Build type = ${CMAKE_BUILD_TYPE}")                                                         # Printing message...

message("Setting build directory...")                                                               # Printing message...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_HOME_DIRECTORY}/build/Release>)                      # Setting build directory...
message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...

if(UNIX AND NOT APPLE)                                                                              
  set(LINUX TRUE)                                                                                   # Setting LINUX variable...
endif(UNIX AND NOT APPLE)

if(WIN32)
  string(REPLACE "\\" "/" GLAD_PATH "${GLAD_PATH}")                                                 # Adjusting backslashes...
  string(REPLACE "\\" "/" GLFW_PATH "${GLFW_PATH}")                                                 # Adjusting backslashes...
  string(REPLACE "\\" "/" GMSH_PATH "${GMSH_PATH}")                                                 # Adjusting backslashes...
  string(REPLACE "\\" "/" CL_PATH "${CL_PATH}")                                                     # Adjusting backslashes...
  string(REPLACE "\\" "/" IMGUI_PATH "${IMGUI_PATH}")                                               # Adjusting backslashes...
  string(REPLACE "\\" "/" IMPLOT_PATH "${IMPLOT_PATH}")                                             # Adjusting backslashes...
  string(REPLACE "\\" "/" NEUTRINO_PATH "${NEUTRINO_PATH}")                                         # Adjusting backslashes...
endif(WIN32)

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################ Spin bubble ###################################")         # Printing message...
message("################################################################################")         # Printing message...
set(TARGET "vacuum_decay")                                                                           # Setting executable name...
set(DIRECTORY "Code")                                                                               # Setting directory name...

message("Adding source files for ${TARGET}...")                                                     # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY}/src SRC)                                  # Getting all Neutrino source files...
set(SOURCES ${SRC})                                                                                 # Setting "SOURCES" variable...

message("Setting IMGUI_SOURCES...")                                                                 # Printing message...
set(IMGUI_SOURCES                                                                                   # All IMGUI source files.
  ${IMGUI_PATH}/imgui.cpp                                                                           # IMGUI source file...
  ${IMGUI_PATH}/imgui_demo.cpp                                                                      # IMGUI source file...
  ${IMGUI_PATH}/imgui_draw.cpp                                                                      # IMGUI source file...
  ${IMGUI_PATH}/backends/imgui_impl_glfw.cpp                                                        # IMGUI source file...
  ${IMGUI_PATH}/backends/imgui_impl_opengl3.cpp                                                     # IMGUI source file...
  ${IMGUI_PATH}/imgui_tables.cpp                                                                    # IMGUI source file...
  ${IMGUI_PATH}/imgui_widgets.cpp)                                                                  # IMGUI source file...

message("Setting IMPLOT_SOURCES...")                                                                # Printing message...
set(IMPLOT_SOURCES                                                                                  # All IMPLOT source files.
  ${IMPLOT_PATH}/implot.cpp                                                                         # IMPLOT source file...
  ${IMPLOT_PATH}/implot_items.cpp)                                                                  # IMPLOT source file...

  message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES})                             # Adding executable...

message("Adding include files...")                                                                  # Printing message...
set(INCLUDES                                                                                        # Setting "INCLUDES" variable...
  ${CMAKE_HOME_DIRECTORY}/include                                                                   # Example include directory.
  ${IMGUI_PATH}                                                                                     # IMGUI include directory.
  ${IMPLOT_PATH}                                                                                    # IMPLOT include directory.
  ${IMGUI_PATH}/backends                                                                            # IMGUI include backends directory.
  ${GLAD_PATH}/include                                                                              # GLAD include directory.
  ${GLFW_PATH}/include                                                                              # GLFW include directory.
  ${CL_PATH}/include                                                                                # OpenCL include directory.
  ${GMSH_PATH}/include                                                                              # GMSH include directory.
  ${NEUTRINO_PATH}/include)                                                                         # Neutrino include directory.
target_include_directories(${TARGET} PRIVATE ${INCLUDES})                                           # Setting include directories...
                                                                        
message("Adding linked libraries...")                                                               # Printing message...
if(LINUX)
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET}                                                                                       # Target name.
    "-lOpenGL"                                                                                      # OpenGL library.
    "-lOpenCL"                                                                                      # OpenCL library.
    "-ldl"                                                                                          # "libdl" library.
    "-lglfw"                                                                                        # GLFW library.
    "-lm"                                                                                           # "math" library.
    "${GMSH_PATH}/lib/libgmsh.so"                                                                   # GMSH library.
    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
endif(LINUX)

if(WIN32) 
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET}                                                                                       # Target name.
    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
    ${GMSH_PATH}/lib/gmsh.lib                                                                       # GMSH library.
    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
endif(WIN32)

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################# INSTRUCTIONS #################################")         # Printing message...
message("################################################################################")         # Printing message...

message("Now go to the \"build\"Release\" directory created by this command and do one (or more)")  # Printing message...
message("of the following things:")                                                                 # Printing message...
message("")                                                                                         # Printing message...
message("1. Type: \"make ${PROJECT_NAME}\" in order to build the executable.")                      # Printing message...
message("2. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("############################# CONFIGURATION REPORT #############################")         # Printing message...
message("################################################################################")         # Printing message...
